# opendeck-ampgd6

./: 40-opendeck-ampgd6.rules  CHANGELOG.md  Cargo.toml  README.md  justfile  manifest.json
src/: device.rs  inputs.rs  mappings.rs
